--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.0"
     repositories {
         google()
         mavenCentral()
     }
+    ext.kotlin_version = "1.5.0"
+    ext.hilt_version = "2.35.1"
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1" //junit5
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
