--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,14 @@
     package="com.teamtuna.emotionaldiary">
 
     <application
+        android:name=".EmotionalDiaryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EmotionalDiary" />
+        android:theme="@style/Theme.EmotionalDiary">
+        <activity android:name=".MainActivity"></activity>
+    </application>
 
 </manifest>
