#18 room 의존성 주입

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     ext.kotlin_version = "1.5.0"
     ext.hilt_version = "2.35.1"
+    ext.room_version = "2.3.0"
 
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
