--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: "dependencies.gradle"
+
     repositories {
         google()
         mavenCentral()
     }
-    ext.kotlin_version = "1.5.0"
-    ext.hilt_version = "2.35.1"
 
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1" //junit5
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hiltVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,34 +27,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    testDeps = [
-            'junit:junit:4.13.2',
-            "androidx.arch.core:core-testing:2.1.0",
-            "org.mockito.kotlin:mockito-kotlin:3.2.0",
-            // Unit5 Tests on the JUnit Platform
-            "org.junit.jupiter:junit-jupiter-api:5.7.1",
-            "org.junit.jupiter:junit-jupiter-params:5.7.1",
-            "org.robolectric:robolectric:4.3",
-            "org.mockito:mockito-junit-jupiter:3.10.0",
-            "org.mockito:mockito-inline:3.9.0"
-    ]
-
-    testRuntimeDeps = [
-            // (Optional) If you also have JUnit 4-based tests
-            "org.junit.vintage:junit-vintage-engine:5.7.1",
-            "org.junit.jupiter:junit-jupiter-engine:5.7.1"
-    ]
-
-    androidTestDeps = [
-            // https://bit.ly/junit5-instrumentation-tests
-            // Jupiter API & Test Runner, if you don't have it already
-            "org.junit.jupiter:junit-jupiter-api:5.7.1",
-            // The instrumentation test companion libraries
-            "de.mannodermaus.junit5:android-test-core:1.2.2",
-            'androidx.test.ext:junit:1.1.2',
-            'androidx.test.espresso:espresso-core:3.3.0'
-    ]
 }
