--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,7 +11,20 @@ java {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
-
     implementation "com.google.dagger:dagger:$versions.hiltVersion"
     kapt "com.google.dagger:dagger-compiler:$versions.hiltVersion"
+
+    // Unit5 Tests on the JUnit Platform
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
+
+    testImplementation "junit:junit:4.13.2"
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.5.2"
+
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+    testImplementation 'org.mockito:mockito-inline:3.9.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
