--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
     testRuntimeOnly(testRuntimeDeps)
     testImplementation(testDeps)
     androidTestImplementation(androidTestDeps)
+
+    implementation project(":presentation")
+    implementation project(":domain")
+    implementation project(":data")
 }
