--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,4 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teamtuna.emotionaldiary.presentation">
 
+    <application>
+        <activity
+            android:name="com.teamtuna.emotionaldiary.main.MainActivity"
+            android:theme="@style/Theme.EmotionalDiary.Splash">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+    </application>
+
 </manifest>
