--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teamtuna.emotionaldiary.presentation">
 
-    <application>
+    <application
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.EmotionalDiary">
         <activity
             android:name="com.teamtuna.emotionaldiary.main.MainActivity"
             android:theme="@style/Theme.EmotionalDiary.Splash">
