#18  room 버전 코드 수정

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,6 +34,7 @@ ext {
             targetSdkVersion            :   30,
             minSdkVersion               :   23,
             hiltVersion                 :   '2.35.1',
+            roomVersion                 :   '2.3.0',
     ]
 
 }
