--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,10 @@ android {
 
 dependencies {
     // room
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
+    implementation "androidx.room:room-runtime:$versions.roomVersion"
+    kapt "androidx.room:room-compiler:$versions.roomVersion"
+    implementation "androidx.room:room-ktx:$versions.roomVersion"
+    testImplementation "androidx.room:room-testing:$versions.roomVersion"
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
