--- a/data/build.gradle
+++ b/data/build.gradle
@@ -64,5 +64,10 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
     implementation "androidx.test:core:$versions.androidXTestCoreVersion"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
+
     implementation project(":domain")
 }
