--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    testImplementation 'org.mockito:mockito-core:3.10.0'
+
     implementation "com.google.dagger:hilt-android:$versions.hiltVersion"
     kapt "com.google.dagger:hilt-compiler:$versions.hiltVersion"
 
