--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-kapt'
 
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -38,6 +40,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation "com.google.dagger:hilt-android:$versions.hiltVersion"
     kapt "com.google.dagger:hilt-compiler:$versions.hiltVersion"
@@ -45,14 +48,30 @@ dependencies {
     testImplementation(testDeps)
     androidTestImplementation(androidTestDeps)
 
+
     // room
     implementation "androidx.room:room-runtime:$versions.roomVersion"
     kapt "androidx.room:room-compiler:$versions.roomVersion"
     implementation "androidx.room:room-ktx:$versions.roomVersion"
     testImplementation "androidx.room:room-testing:$versions.roomVersion"
 
+    //work
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
+
+    // firebase
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
 
     implementation project(":presentation")
     implementation project(":domain")
     implementation project(":data")
+
+    debugImplementation 'com.github.eastar-dev.EastarLog2:log:2.1.9'
+    releaseImplementation 'com.github.eastar-dev.EastarLog2:logNoOp:2.1.9'
+    testImplementation 'com.github.eastar-dev.EastarLog2:logTest:2.1.9'
+
 }
