--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
+        classpath 'com.google.gms:google-services:4.3.8'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1" //junit5
         classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hiltVersion"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,6 +24,7 @@ allprojects {
         google()
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
+        maven { url 'https://jitpack.io' }
     }
 }
 
