#50 build 통과 못해서 수정해서 올림

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation "com.google.dagger:dagger:$versions.hiltVersion"
     kapt "com.google.dagger:dagger-compiler:$versions.hiltVersion"
 
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutinesVersion"
+
     // Unit5 Tests on the JUnit Platform
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
