#50 test 오류 케이스 수정

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,6 +9,10 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlinVersion"
     implementation "com.google.dagger:dagger:$versions.hiltVersion"
