--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -36,7 +36,8 @@ ext {
             hiltVersion            : '2.35.1',
             roomVersion            : '2.3.0',
             androidXTestCoreVersion: '1.2.0',
-            coroutinesVersion : '1.4.3'
+            coroutinesVersion      : '1.4.3',
+            ktlintGradlePlugin     : '9.4.1'
     ]
 
 }
