--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -22,9 +22,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    
     - name: set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    
     - name: Unit tests
       run: bash ./gradlew test --stacktrace
+    
+    - name: Build with Gradle
+        run: ./gradlew build
