--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -33,3 +33,12 @@ jobs:
     
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Build debug APK
+      run: bash ./gradlew assembleDebug --stacktrace
+      
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+        name: app
+        path: app/build/outputs/apk/debug
