감정 히스토리 화면 추가

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             </intent-filter>
 
         </activity>
+        <activity android:name="com.teamtuna.emotionaldiary.history.HistoryActivity" />
+
     </application>
 
 </manifest>
