--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: develop
+name: Unit tests
 
 # Controls when the workflow will run
 on:
@@ -79,7 +79,7 @@ jobs:
       - name: Run Unit tests
         shell: bash
         run: |
-          ./gradlew --no-daemon domain:testDebugUnitTest
+          ./gradlew --no-daemon domain:test
 
       # 테스트 결과
       - name: Upload test results
