--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,17 @@ on:
         required: true
         default: 'Deploy'
 
+env:
+  JAVA: 1.8
+  ANDROID_WORKFLOW_PAT: ${{secrets.GIT_TUNA_WORKFLOW_TOKEN}}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build-debug-apk:
     # The type of runner that the job will run on
+    name: Build Debug APK
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
       - uses: actions/checkout@v2
@@ -35,7 +39,6 @@ jobs:
         with:
           java-version: 1.8
 
-      # 빌드
       - name: Build with Gradle
         shell: bash
         run: |
@@ -43,11 +46,11 @@ jobs:
 
       # Debug APK Path 세팅
       - name: Set APK path
-          id: apk
-          shell: bash
-          run: |
-            echo "::set-output name=DEBUG_APK_PATH::$(find . -name *app-debug.apk)"
-            echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -name *app-debug.apk))"
+        id: apk
+        shell: bash
+        run: |
+          echo "::set-output name=DEBUG_APK_PATH::$(find . -name *app-debug.apk)"
+          echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -name *app-debug.apk))"
 
       # APK 업로드
       - name: Upload APK as an artifact
@@ -62,38 +65,38 @@ jobs:
 
       runs-on: ubuntu-latest
         steps:
-          - name: Checkout
+            - name: Checkout
               uses: actions/checkout@v2
               with:
                 fetch-depth: 0
 
-          - name: Get git log
-              id: git-log
-              shell: bash
-              run: |
-                latestReleaseTag=$(git tag -l [0-9].* | tail -n1)
-                git log -n 3 --no-merges $latestReleaseTag..HEAD --oneline --pretty=format:"· %s | %cn" | jq -R . | sed -e 's/^"//' -e 's/"$//' >> gitlog.txt
-                cat gitlog.txt
-
-          - name: Download APKs
-              uses: actions/download-artifact@v2
-
-              - name: Set APKs path to environment variables
-                id: apk
-                shell: bash
-                run: |
-                  find . -type f -name *app-debug.apk
-                  echo "::set-output name=DEBUG_APK_PATH::$(find . -type f -name *app-debug.apk)"
-                            echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -type f -name *app-debug.apk))"
-
-              - name: Upload APKs to Slack
+              - name: Get git log
+                  id: git-log
                   shell: bash
                   run: |
-                    ref=${GITHUB_REF#refs/}
-                    sha=${GITHUB_SHA::8}
-                    gitlog="$(cat gitlog.txt)"
-                    debug_permalink=$(curl https://slack.com/api/files.upload -H "Authorization: Bearer ${{ secrets.GIT_TUNA_WORKFLOW_TOKEN }}" -F file=@${{ steps.apk.outputs.DEBUG_APK_PATH }} -F channels=CBWHTBLNL -F thread_ts='1607309305.245800' | jq -r '.file.url_private_download')
-                    curl https://slack.com/api/chat.postMessage -X POST -H 'Authorization: Bearer ${{ secrets.GIT_TUNA_WORKFLOW_TOKEN }}' -H 'Content-type: application/json' --data '{"channel":"CPMANENF3","attachments": [{ "color":"#FF7E36", "fields": [{"title":"Publisher","value":"${{ github.actor }}","short":true}, {"title":"Build Variant","value":"Debug","short":true}, {"title":"Ref","value":"'"$ref"'","short":true}, {"title":"Sha", "value":"'"$sha"'","short":true}, {"title":"Recent changes","value":"'"$gitlog"'","short":false}],"actions": [{ "type": "button", "name": "download", "text": "${{ steps.apk.outputs.DEBUG_APK_NAME }}", "url": "'"$debug_permalink"'", "style": "primary" }] }] }'
+                    latestReleaseTag=$(git tag -l [0-9].* | tail -n1)
+                    git log -n 3 --no-merges $latestReleaseTag..HEAD --oneline --pretty=format:"· %s | %cn" | jq -R . | sed -e 's/^"//' -e 's/"$//' >> gitlog.txt
+                    cat gitlog.txt
+
+              - name: Download APKs
+                  uses: actions/download-artifact@v2
+
+                    - name: Set APKs path to environment variables
+                      id: apk
+                      shell: bash
+                      run: |
+                        find . -type f -name *app-debug.apk
+                        echo "::set-output name=DEBUG_APK_PATH::$(find . -type f -name *app-debug.apk)"
+                                  echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -type f -name *app-debug.apk))"
+
+                    - name: Upload APKs to Slack
+                        shell: bash
+                        run: |
+                          ref=${GITHUB_REF#refs/}
+                          sha=${GITHUB_SHA::8}
+                          gitlog="$(cat gitlog.txt)"
+                          debug_permalink=$(curl https://slack.com/api/files.upload -H "Authorization: Bearer ${{ secrets.GIT_TUNA_WORKFLOW_TOKEN }}" -F file=@${{ steps.apk.outputs.DEBUG_APK_PATH }} -F channels=CBWHTBLNL -F thread_ts='1607309305.245800' | jq -r '.file.url_private_download')
+                          curl https://slack.com/api/chat.postMessage -X POST -H 'Authorization: Bearer ${{ secrets.GIT_TUNA_WORKFLOW_TOKEN }}' -H 'Content-type: application/json' --data '{"channel":"CPMANENF3","attachments": [{ "color":"#FF7E36", "fields": [{"title":"Publisher","value":"${{ github.actor }}","short":true}, {"title":"Build Variant","value":"Debug","short":true}, {"title":"Ref","value":"'"$ref"'","short":true}, {"title":"Sha", "value":"'"$sha"'","short":true}, {"title":"Recent changes","value":"'"$gitlog"'","short":false}],"actions": [{ "type": "button", "name": "download", "text": "${{ steps.apk.outputs.DEBUG_APK_NAME }}", "url": "'"$debug_permalink"'", "style": "primary" }] }] }'
 
   slack-workflow-status:
     if: always()
