--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: [ develop, master ]
 
+  tags:
+    - *
+
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     input:
