#62 Deploy 태그 그어졌을때도 동작하도록 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,11 @@ name: Deploy APKs
 on:
   push:
     branches: [ develop, master ]
-
+  pull_requests:
+    branches:
+      - develop
   tags:
-    - *
+    - v*.*
 
 
   # Allows you to run this workflow manually from the Actions tab
