--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,8 +57,8 @@ jobs:
         id: apk
         shell: bash
         run: |
-          echo "::set-output name=DEBUG_APK_PATH::$(find . -name *app-debug.apk)"
-          echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -name *app-debug.apk))"
+          echo "::set-output name=DEBUG_APK_PATH::$(find . -name app-debug.apk)"
+          echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -name app-debug.apk))"
 
       # APK 업로드
       - name: Upload APK as an artifact
@@ -92,9 +92,9 @@ jobs:
         id: apk
         shell: bash
         run: |
-          find . -type f -name *app-debug.apk
-          echo "::set-output name=DEBUG_APK_PATH::$(find . -type f -name *app-debug.apk)"
-          echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -type f -name *app-debug.apk))"
+          find . -type f -name app-debug.apk
+          echo "::set-output name=DEBUG_APK_PATH::$(find . -type f -name app-debug.apk)"
+          echo "::set-output name=DEBUG_APK_NAME::$(basename $(find . -type f -name app-debug.apk))"
 
       - name: Upload APKs to Slack
         shell: bash
