#6  Date -> LocalDateTime 변경

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -73,5 +74,7 @@ dependencies {
     debugImplementation 'com.github.eastar-dev.EastarLog2:log:2.1.9'
     releaseImplementation 'com.github.eastar-dev.EastarLog2:logNoOp:2.1.9'
     testImplementation 'com.github.eastar-dev.EastarLog2:logTest:2.1.9'
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
 }
