--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,6 @@ dependencies {
     implementation project(':domain')
     implementation project(':data')
 }
+
+task startktlintCheck(dependsOn:['ktlintCheck'])
+task startKtlintFormat(dependsOn:['ktlintFormat'])
