--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         // https://github.com/JLLeitschuh/ktlint-gradle
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.1.0"
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -26,11 +26,11 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
-    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    apply plugin: 'org.jlleitschuh.gradle.ktlint'
     ktlint {
         debug = false
         android = true
-        version = "0.42.1"
+        version = '0.42.1'
         filter {
             exclude("**/test/**")
             exclude("**/androidTest/**")
