--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.0.1'
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.3.1'
+
+
+
+    implementation "com.google.accompanist:accompanist-insets:0.17.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
     // Integration with observables
