--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.hellocompose.TestHelloCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
+        <activity
+            android:name="com.teamtuna.emotionaldiary.compose.arch_compose.ArchCompose"
+            android:theme="@style/Theme.EmotionalDiary.Compose" />
 
     </application>
 
