--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.firebase.crashlytics'
 }
-apply from: '../b.gradle'
+apply from: '../androidBase.gradle'
 
 android {
     defaultConfig {
