--- a/data/build.gradle
+++ b/data/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.library'
 }
 
-apply from: '../b.gradle'
+apply from: '../androidBase.gradle'
 
 dependencies {
     // room
