--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-kapt'
 }
 
-apply from: '../a.gradle'
+apply from: '../base.gradle'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
