--- a/.github/workflows/upload-bundle-to-store.yml
+++ b/.github/workflows/upload-bundle-to-store.yml
@@ -1,11 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy APKs
+name: Upload APK to google store
 
 # Controls when the workflow will run
 on:
   push:
-    branches: [ develop, master ]
+    branches: [ develop, master, \#71 ]
     tags:
       - v*.*
       - test/*
@@ -18,9 +18,9 @@ on:
         required: true
         default: 'warning'
       name:
-        description: 'Deploy APK'
+        description: 'Upload APK to google play store'
         required: true
-        default: 'Deploy'
+        default: 'UploadApk'
 
 env:
   JAVA: 1.8
@@ -29,25 +29,25 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build-debug-apk:
+  build-release-apk:
     # The type of runner that the job will run on
-    name: Build Debug APK
+    name: Build Release AppBundle
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: set up JDK 11
+      - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 1.8
 
       - name: Build with Gradle
         shell: bash
         run: |
-          ./gradlew --no-daemon app:assembleDebug
+          ./gradlew --no-daemon app:assembleRelease
 
-      # Debug APK Path 세팅
+      # Release APK Path 세팅
       - name: Set APK path
         id: apk
         shell: bash
@@ -99,6 +99,19 @@ jobs:
           gitlog="$(cat gitlog.txt)"
           debug_permalink=$(curl https://slack.com/api/files.upload -H "Authorization: Bearer ${{ secrets.ANDROID_BOT_TOKEN }}" -F file=@${{ steps.apk.outputs.DEBUG_APK_PATH }} -F channels=CPMANENF3 -F thread_ts='1607309305.245800' | jq -r '.file.url_private_download')
           curl https://slack.com/api/chat.postMessage -X POST -H 'Authorization: Bearer ${{ secrets.ANDROID_BOT_TOKEN }}' -H 'Content-type: application/json' --data '{"channel":"CPMANENF3","attachments": [{ "color":"#FF7E36", "fields": [{"title":"Publisher","value":"${{ github.actor }}","short":true}, {"title":"Build Variant","value":"Debug","short":true}, {"title":"Ref","value":"'"$ref"'","short":true}, {"title":"Sha", "value":"'"$sha"'","short":true}, {"title":"Recent changes","value":"'"$gitlog"'","short":false}],"actions": [{ "type": "button", "name": "download", "text": "${{ steps.apk.outputs.DEBUG_APK_NAME }}", "url": "'"$debug_permalink"'", "style": "primary" }] }] }'
+
+      - name: upload apk to google play store
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: ${{ SERVICE_ACCOUNT_JSON }}
+          packageName: com.teamtuna.emotionaldiary
+          releaseFiles: app/build/outputs/bundle/release/*.aab
+          track: production
+          inAppUpdatePriority: 2
+          userFraction: 0.33
+          whatsNewDirectory: distribution/whatsnew
+          mappingFile: app/build/outputs/mapping/release/mapping.txt
+
 
   slack-workflow-status:
     if: always()
