--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: "dependencies.gradle"
+
     repositories {
         google()
         mavenCentral()
@@ -7,14 +9,13 @@ buildscript {
     }
     
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.1'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21'
-        classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1' //junit5
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
+        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.0"
+        classpath 'com.google.gms:google-services:4.3.8'
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1" //junit5
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.hiltVersion"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
-        // https://github.com/JLLeitschuh/ktlint-gradle
-        classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.1.0'
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:${versions.ktlintGradlePlugin}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,19 +25,20 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
         maven { url 'https://jitpack.io' }
     }
-    apply plugin: 'org.jlleitschuh.gradle.ktlint'
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
     ktlint {
         debug = false
         android = true
-        version = '0.42.1'
+        version = "0.36.0"
         filter {
             exclude("**/test/**")
             exclude("**/androidTest/**")
         }
-        additionalEditorconfigFile = file(".editorconfig")
     }
+
 }
 
 task clean(type: Delete) {
