--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.arch_compose.ArchCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
+        <activity
+            android:name="com.teamtuna.emotionaldiary.compose.calendar.CalendarCompose"
+            android:theme="@style/Theme.EmotionalDiary.Compose" />
 
     </application>
 
