--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     // When using a MDC theme
     //implementation "com.google.android.material:compose-theme-adapter:1.0.1"
     // When using a AppCompat theme
-    implementation "com.google.accompanist:accompanist-appcompat-theme:0.16.0"
+    implementation 'com.google.accompanist:accompanist-appcompat-theme:0.17.0'
 
     implementation project(":domain")
 }
