emotion-71 : deploy feature/emotion-71 remove

--- a/.github/workflows/deploy-store.yml
+++ b/.github/workflows/deploy-store.yml
@@ -2,7 +2,7 @@ name: Deploy Store
 
 on:
   push:
-    branches: [ master, feature/emotion-71 ]
+    branches: [ master ]
     tags:
       - v*.*
       - test/*
