: - coil 적용 - timeline recycler view 적용

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -10,15 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmotionalDiary">
         <activity
-            android:name="com.teamtuna.emotionaldiary.main.MainActivity"
-            android:theme="@style/Theme.EmotionalDiary.Splash">
-
+            android:name="com.teamtuna.emotionaldiary.timeline.TimelineActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <!--        <activity-->
+        <!--            android:name="com.teamtuna.emotionaldiary.main.MainActivity"-->
+        <!--            android:theme="@style/Theme.EmotionalDiary.Splash">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
         <activity android:name="com.teamtuna.emotionaldiary.history.HistoryActivity" />
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.hellocompose.TestHelloCompose"
@@ -26,7 +34,6 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.arch_compose.ArchCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
-
     </application>
 
 </manifest>
