--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,12 +12,6 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.main.MainActivity"
             android:theme="@style/Theme.EmotionalDiary.Splash">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
         <activity android:name="com.teamtuna.emotionaldiary.history.HistoryActivity" />
         <activity
@@ -26,7 +20,15 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.arch_compose.ArchCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
+        <activity
+            android:name="com.teamtuna.emotionaldiary.write.WriteActivity"
+            android:theme="@style/Theme.EmotionalDiary.Compose" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
