--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -62,8 +62,8 @@ dependencies {
     // Calendar
     implementation "com.github.sigmadeltasoftware:CalPose:1.1.0"
 
-    // Glide
-    implementation "com.github.bumptech.glide:glide:4.12.0"
+    // coil
+    implementation "io.coil-kt:coil-compose:1.3.2"
 
     implementation project(":domain")
 }
