: emotion-88 - 코드리뷰 수정

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -10,23 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmotionalDiary">
         <activity
-            android:name="com.teamtuna.emotionaldiary.timeline.TimelineActivity"
-            android:exported="true">
+            android:name="com.teamtuna.emotionaldiary.main.MainActivity"
+            android:theme="@style/Theme.EmotionalDiary.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--        <activity-->
-        <!--            android:name="com.teamtuna.emotionaldiary.main.MainActivity"-->
-        <!--            android:theme="@style/Theme.EmotionalDiary.Splash">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.MAIN" />-->
-
-        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-        <!--            </intent-filter>-->
-        <!--        </activity>-->
         <activity android:name="com.teamtuna.emotionaldiary.history.HistoryActivity" />
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.hellocompose.TestHelloCompose"
