EMOTION-88 timeline compose 추가 (#102)
* : - coil 적용
- timeline recycler view 적용

* : - test

* : - test

* : emotion-88
- 사용하지 않는 import 제거

* : emotion-88
- kt lint

* : emotion-88
- kt lint

* : emotion-88
- kt lint

* Update base.gradle

Co-authored-by: eastar Jeong <438869+eastar-dev@users.noreply.github.com>

* : emotion-88
- 코드리뷰 수정

* : emotion-88
- lint 처리

* : emotion-88
- lint 처리

* : emotion-88
- lint 처리

* : emotion-88
- lint 처리

Co-authored-by: eastar Jeong <438869+eastar-dev@users.noreply.github.com>

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,12 +12,11 @@
         <activity
             android:name="com.teamtuna.emotionaldiary.main.MainActivity"
             android:theme="@style/Theme.EmotionalDiary.Splash">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name="com.teamtuna.emotionaldiary.history.HistoryActivity" />
         <activity
@@ -28,13 +27,11 @@
             android:theme="@style/Theme.EmotionalDiary.Compose" />
         <activity
             android:name="com.teamtuna.emotionaldiary.write.WriteActivity"
-            android:theme="@style/Theme.EmotionalDiary.Compose" >
-        </activity>
+            android:theme="@style/Theme.EmotionalDiary.Compose" />
 
         <activity
             android:name="com.teamtuna.emotionaldiary.compose.calendar.CalendarCompose"
             android:theme="@style/Theme.EmotionalDiary.Compose" />
-
     </application>
 
 </manifest>
