--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -27,19 +27,18 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
     //https://developer.android.com/jetpack/compose/setup#compose-compiler
-    implementation 'androidx.compose.ui:ui:1.0.1'
+    implementation 'androidx.compose.ui:ui:1.0.2'
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.0.2'
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.1'
+    implementation 'androidx.compose.foundation:foundation:1.0.2'
     // Material Design
-    implementation 'androidx.compose.material:material:1.0.1'
+    implementation 'androidx.compose.material:material:1.0.2'
     // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.1'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.1'
+    implementation 'androidx.compose.material:material-icons-core:1.0.2'
+    implementation 'androidx.compose.material:material-icons-extended:1.0.2'
     // Integration with activities
     implementation 'androidx.activity:activity-compose:1.3.1'
-
 
 
     implementation "com.google.accompanist:accompanist-insets:0.17.0"
@@ -48,11 +47,14 @@ dependencies {
     // Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07'
     // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.1'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.0.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.appcompat:appcompat:1.3.1'
 //    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.1'
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.2'
 
     //for theme reuse
     //https://developer.android.com/jetpack/compose/interop/adding#reuse-view
