--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1' //junit5
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
+        classpath 'com.google.firebase:perf-plugin:1.4.0'  // Performance Monitoring plugin
         // https://github.com/JLLeitschuh/ktlint-gradle
         classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.1.0'
         // NOTE: Do not place your application dependencies here; they belong
